# CG_SHOP_2025_3

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ant.cpp  cmake_install.cmake  functions.cpp  functions_task1.cpp  opt_triangulation  output_method.md  project.cpp  python_script.py  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  run_jsons.sh  run_the_instances.py  solution_output.json  stats_output.md  update_json_files.py
CGAL_Qt5_moc_and_resources_autogen/: deps  mocs_compilation.cpp
CGAL_Qt5_moc_and_resources_autogen/7TODTCG6JX/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
best_instances/: SA on CATEGORY B.md:Zone.Identifier  SA on CATEGORY C.md:Zone.Identifier  output_ortho.md  output_point_set.md  output_simple-polygon_.md  output_simple-polygon_EXTERIOR_CATEGORY B.md  output_simple-polygon_EXTERIOR_CATEGORY C.md
includes/utils/: Custom_Constrained_Delaunay_triangulation_2.h  ant.h  extra_graphics.h  extra_graphics2.h  functions.h  functions_task1.h  libraries.h  process_json_to_md.py
tests/challenge_instances/: ortho_10.json  ortho_100_bd1e4a14.instance.json  ortho_10_d2723dcc.instance.json  ortho_150_53eb4022.instance.json  ortho_20.json  ortho_20_5a9e8244.instance.json  ortho_20_e2aff192.instance.json  (+145 more)
(+68 files in other folders)
